[package]
name = "m3u8dlfast"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
url = "2.2"
anyhow = "1.0"
home = "0.5"
reqwest = "0.11"
futures = "0.3"
bytes = "1.1"
tempfile = "3.2"
# rust-embed = "6.0"

[dependencies.tokio]
version = "1.10"
features = ["full"]